--- a/drombler-commons-fx/drombler-commons-fx-docking/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-docking/pom.xml
@@ -80,6 +80,11 @@ Contributor(s): .
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-client-docking-spi</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>drombler-commons-fx-core</artifactId>
             <version>${project.version}</version>
         </dependency>
