--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/pom.xml
@@ -63,7 +63,7 @@ Contributor(s): .
                             <outputDirectory>${project.build.directory}/jfx/app</outputDirectory>
                             <resources>          
                                 <resource>
-                                    <directory>src/main/config</directory>
+                                    <directory>src/main/logging</directory>
                                     <filtering>true</filtering>
                                 </resource>
                             </resources>              
@@ -86,6 +86,13 @@ Contributor(s): .
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-site-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                    <skipDeploy>true</skipDeploy>
+                </configuration>
             </plugin>
         </plugins>
     </build>
