[#35] Upgrade to JavaFX 8  - omit GUI Tests on Jenkins

--- a/drombler-commons-fx/drombler-commons-fx-docking/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-docking/pom.xml
@@ -100,4 +100,22 @@ Contributor(s): .
             <scope>test</scope>
         </dependency>
     </dependencies>
+    
+    <!--TODO: Move to Drombler OSS Parent-->
+    <profiles>
+        <profile>
+            <id>jenkins</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludedGroups>org.drombler.commons.fx.docking.GUITests</excludedGroups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
