[#51] FXML Convention: Consider use dedicated properties files
- Resource handling fixes
- SimpleEventHandlerProperty
- Clean-ups

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/src/main/resources/org/drombler/commons/fx/samples/docking/LeftTestPane.properties
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/src/main/resources/org/drombler/commons/fx/samples/docking/LeftTestPane.properties
@@ -11,9 +11,5 @@
 #
 # Contributor(s): .
 
-#Menus
-Menu.Window.displayName=_Window
-
-#Beans
-Sample.name.displayName=Name:
-
+displayName=_Left
+newSampleButton.text=New Sample
