--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/src/main/resources/org/drombler/commons/fx/samples/docking/TopTestPane.properties
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/src/main/resources/org/drombler/commons/fx/samples/docking/TopTestPane.properties
@@ -11,9 +11,6 @@
 #
 # Contributor(s): .
 
-#Menus
-Menu.Window.displayName=_Window
-
-#Beans
-Sample.name.displayName=Name:
-
+# TopTestPane
+displayName=_Top
+label.text=Top
