[#46] Make the Action Framework usable outside Drombler FX
- Action Sample added
- Small issues fixed
- Clean-up

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/pom.xml
@@ -63,7 +63,7 @@ Contributor(s): .
                             <outputDirectory>${project.build.directory}/jfx/app</outputDirectory>
                             <resources>          
                                 <resource>
-                                    <directory>src/main/logging</directory>
+                                    <directory>src/main/config</directory>
                                     <filtering>true</filtering>
                                 </resource>
                             </resources>              
