--- a/drombler-commons-client/drombler-commons-client-docking-spi/pom.xml
+++ b/drombler-commons-client/drombler-commons-client-docking-spi/pom.xml
@@ -78,6 +78,11 @@ Contributor(s): .
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-client-docking</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
