--- a/drombler-commons-docking/drombler-commons-docking-fx-context/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-fx-context/pom.xml
@@ -82,10 +82,6 @@ Contributor(s): .
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
@@ -94,9 +90,9 @@ Contributor(s): .
     
     <!-- TODO: Move to Drombler OSS Parent-->
     <profiles>
-        <profile>
-            <!-- TODO: make ths profiles during releasing configurable-->
-            <!--<id>jenkins</id>-->
+        <!--        <profile>
+             TODO: make ths profiles during releasing configurable
+            <id>jenkins</id>
             <id>release-profile</id>
             <build>
                 <plugins>
@@ -109,6 +105,6 @@ Contributor(s): .
                     </plugin>
                 </plugins>
             </build>
-        </profile>
+        </profile>-->
     </profiles>
 </project>
