Exclude GUI tests on Jenkins for now.

--- a/drombler-commons-fx/drombler-commons-fx-docking/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-docking/pom.xml
@@ -102,6 +102,12 @@ Contributor(s): .
             <!-- TODO: make ths profiles during releasing configurable-->
             <!--<id>jenkins</id>-->
             <id>release-profile</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
