--- a/drombler-commons-docking/drombler-commons-docking-fx-context/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-fx-context/pom.xml
@@ -90,21 +90,27 @@ Contributor(s): .
     
     <!-- TODO: Move to Drombler OSS Parent-->
     <profiles>
-        <!--        <profile>
-             TODO: make ths profiles during releasing configurable
-            <id>jenkins</id>
+        <profile>
+            <!-- TODO: make ths profiles during releasing configurable
+            <id>jenkins</id>-->
             <id>release-profile</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>org.drombler.commons.fx.docking.GUITests</excludedGroups>
+                            <excludedGroups>org.drombler.commons.docking.fx.context.GUITests</excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
-        </profile>-->
+        </profile>
     </profiles>
 </project>
