--- a/drombler-commons-docking/drombler-commons-docking-fx/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-fx/pom.xml
@@ -114,7 +114,7 @@ Contributor(s): .
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>org.drombler.commons.fx.docking.GUITests</excludedGroups>
+                            <excludedGroups>org.drombler.commons.docking.fx.GUITests</excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
