--- a/drombler-commons-docking/drombler-commons-docking-core/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-core/pom.xml
@@ -68,6 +68,10 @@ Contributor(s): .
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
