#111 File Type Editor Registration - Data module added - Context module added - moved classes from Drombler ACP and Drombler FX

--- a/drombler-commons-docking/drombler-commons-docking-core/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-core/pom.xml
@@ -76,5 +76,9 @@ Contributor(s): .
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.softsmithy.lib</groupId>
+            <artifactId>softsmithy-lib-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
