--- a/drombler-commons-docking/drombler-commons-docking-fx-context/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-fx-context/pom.xml
@@ -73,6 +73,11 @@ Contributor(s): .
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-docking-context</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>drombler-commons-docking-fx</artifactId>
             <version>${project.version}</version>
         </dependency>
