--- a/drombler-commons-docking/pom.xml
+++ b/drombler-commons-docking/pom.xml
@@ -67,6 +67,7 @@ Contributor(s): .
 
     <modules>
         <module>drombler-commons-docking-core</module>
+        <module>drombler-commons-docking-context</module>
         <module>drombler-commons-docking-spi</module>
         <module>drombler-commons-docking-fx</module>
         <module>drombler-commons-docking-fx-context</module>
@@ -87,6 +88,11 @@ Contributor(s): .
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>drombler-commons-docking-fx</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>drombler-commons-docking-context</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
