--- a/drombler-commons-docking/drombler-commons-docking-context/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-context/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>drombler-commons-action-command</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.softsmithy.lib</groupId>
+            <artifactId>softsmithy-lib-beans</artifactId>
+        </dependency>
         
         <dependency>
             <groupId>org.slf4j</groupId>
