--- a/drombler-commons-docking/drombler-commons-docking-core/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-core/pom.xml
@@ -72,6 +72,10 @@ Contributor(s): .
             <artifactId>softsmithy-lib-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.softsmithy.lib</groupId>
+            <artifactId>softsmithy-lib-beans</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
