--- a/drombler-commons-docking/drombler-commons-docking-context/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-context/pom.xml
@@ -14,7 +14,7 @@
     <description>Drombler Commons - Docking - Context provides support for the Context Framework inside the Docking Framework.</description>
     <inceptionYear>2016</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
 
     <scm>
         <connection>${scm.connection}</connection>
