--- a/drombler-commons-docking/drombler-commons-docking-core/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-core/pom.xml
@@ -29,7 +29,7 @@ Contributor(s): .
         client side docking framework.</description>
     <inceptionYear>2014</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
 
     <scm>
         <connection>${scm.connection}</connection>
