--- a/drombler-commons-docking/drombler-commons-docking-fx/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-fx/pom.xml
@@ -28,7 +28,7 @@ Contributor(s): .
     <description>Drombler Commons - Docking - FX provides a docking framework for JavaFX.</description>
     <inceptionYear>2014</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
 
     <scm>
         <connection>${scm.connection}</connection>
