--- a/drombler-commons-docking/drombler-commons-docking-spi/pom.xml
+++ b/drombler-commons-docking/drombler-commons-docking-spi/pom.xml
@@ -18,7 +18,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
         <relativePath>../../drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-docking-spi</artifactId>
@@ -113,7 +113,7 @@ Contributor(s): .
         </dependency>
         <dependency>
             <groupId>org.softsmithy.devlib</groupId>
-            <artifactId>softsmithy-devlib-core</artifactId>
+            <artifactId>softsmithy-devlib-junit</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
